Add GetFormAForAcceptance use case in backend

--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/emailConfirmationEmailSubject.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/emailConfirmationEmailSubject.html
@@ -1,1 +1,1 @@
-Potwierdzenie rejestracji konta w Portalu rejsów badawczych Biura Armatora Uniwersytetu
+Potwierdzenie rejestracji konta w Portalu rejsów badawczych Biura Armatora UG
