--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/requestToSupervisorMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/requestToSupervisorMessage.html
@@ -3,13 +3,13 @@
         <p>
             Witaj!<br /><br />
             
-            Prosimy o akceptację Formularza A w zgłoszeniu rejsu badawczego wysłanym przez kierownika:<br />
-            {{cruiseManagerFirstName}} {{cruiseManagerLastName}} ({{cruiseManagerEmail}})<br />
+            Prosimy o akceptację zgłoszenia rejsu badawczego wysłanego przez kierownika:<br /><br />
+            {{cruiseManagerFirstName}} {{cruiseManagerLastName}} ({{cruiseManagerEmail}})<br /><br />
             w Portalu rejsów badawczych Biura Armatora UG. Wysyłamy tę prośbę, ponieważ zgłaszający określił Cię jako
             swojego przełożonego. Jeśli uważasz, że to pomyłka, skontaktuj się z nami, wysyłając wiadomość e-mail na
             adres <a href="mailto:office.oceanograf@ug.edu.pl">office.oceanograf@ug.edu.pl</a><br /><br />
             
-            Aby przejść do formularza, kliknij <a href="{{link}}">TUTAJ</a>.<br /><br />
+            Aby przejść do zgłoszenia, kliknij <a href="{{link}}">TUTAJ</a>.<br /><br />
         </p>
         <footer>
             Pozdrawiamy<br/>
