Add crApp according to new db model

--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/requestToSupervisorMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/requestToSupervisorMessage.html
@@ -7,7 +7,7 @@
             {{cruiseManagerFirstName}} {{cruiseManagerLastName}} ({{cruiseManagerEmail}})<br /><br />
             w Portalu rejsów badawczych Biura Armatora UG. Wysyłamy tę prośbę, ponieważ zgłaszający określił Cię jako
             swojego przełożonego. Jeśli uważasz, że to pomyłka, skontaktuj się z nami, wysyłając wiadomość e-mail na
-            adres <a href="mailto:office.oceanograf@ug.edu.pl">office.oceanograf@ug.edu.pl</a><br /><br />
+            adres <a href="mailto:office.oceanograf@ug.edu.pl">office.oceanograf@ug.edu.pl</a>.<br /><br />
             
             Aby przejść do zgłoszenia, kliknij <a href="{{link}}">TUTAJ</a>.<br /><br />
         </p>
