Show correct date format in cruiseConfirmedMessage

--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/cruiseConfirmedMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/cruiseConfirmedMessage.html
@@ -2,8 +2,8 @@
 <body>
 <p>
     Witaj, {{firstName}} {{lastName}}!<br/><br/>
-    Rejs w którym uczestniczysz został zaakceptowany. <br/><br/>
-    Ostateczna data to: <i>{{startDate}}-{{endDate}}</i><br/><br/>
+    Rejs, w którym uczestniczysz, został zaakceptowany.<br/><br/>
+    Ostateczny termin to: <i>{{startDate}} - {{endDate}}</i>.<br/><br/>
     Wejdź na portal do obsługi rejsów aby zobaczyć szczegóły
     
 </p>
