Do not send confirmation link when creating account for someone

--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/accountCreatedMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/accountCreatedMessage.html
@@ -3,14 +3,13 @@
         <p>
             Witaj, {{firstName}} {{lastName}}!<br/><br/>
             Twoje konto<i>{{roleText}}</i>zostało zarejestrowane w systemie rejsów badawczych Biura Armatora
-            Uniwersytetu.<br/>
-            Aby potwierdzić rejestrację konta, kliknij <a href="{{link}}">TUTAJ</a>.<br/>
+            Uniwersytetu Gdańskiego.<br/>
             Twoje hasło to: <i>{{password}}</i>.
             Możesz je zmienić po pierwszym zalogowaniu w ustawieniach konta.<br/><br/>
         </p>
         <footer>
             Pozdrawiamy<br/>
-            Biuro Armatora Uniwersytetu
+            Biuro Armatora Uniwersytetu Gdańskiego
         </footer>
     </body>
 </html>
