--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/accountAcceptedMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/accountAcceptedMessage.html
@@ -2,12 +2,12 @@
     <body>
         <p>
             Witaj, {{firstName}} {{lastName}}!<br/><br/>
-            Twoje konto w systemie rejsów badawczych zostało zaakceptowane przez Biuro Armatora Uniwersytetu. Możesz
-            już z niego korzystać.
+            Twoje konto w Portalu rejsów badawczych zostało zaakceptowane przez Biuro Armatora Uniwersytetu Gdańskiego.
+            Możesz już z niego korzystać.
         </p>
         <footer>
             Pozdrawiamy<br/>
-            Biuro Armatora Uniwersytetu
+            Biuro Armatora z jednostką r/v Oceanograf
         </footer>
     </body>
 </html>
