--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/accountCreatedMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/accountCreatedMessage.html
@@ -9,7 +9,7 @@
         </p>
         <footer>
             Pozdrawiamy<br/>
-            Biuro Armatora Uniwersytetu Gdańskiego
+            Biuro Armatora z jednostką r/v Oceanograf
         </footer>
     </body>
 </html>
