--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/cruiseConfirmedMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/cruiseConfirmedMessage.html
@@ -4,12 +4,12 @@
     Witaj, {{firstName}} {{lastName}}!<br/><br/>
     Rejs, w którym uczestniczysz, został zaakceptowany.<br/><br/>
     Ostateczny termin to: <i>{{startDate}} - {{endDate}}</i>.<br/><br/>
-    Wejdź na portal do obsługi rejsów aby zobaczyć szczegóły
+    Odwiedź Portal rejsów badawczych, aby wyświetlić szczegóły.
     
 </p>
 <footer>
     Pozdrawiamy<br/>
-    Biuro Armatora Uniwersytetu
+    Biuro Armatora z jednostką r/v Oceanograf
 </footer>
 </body>
 </html>
