--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/emailConfirmationMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/emailConfirmationMessage.html
@@ -3,12 +3,12 @@
         <p>
             Witaj, {{firstName}} {{lastName}}!<br/><br/>
             Twoje konto<i>{{roleText}}</i>zostało zarejestrowane w systemie rejsów badawczych Biura Armatora
-            Uniwersytetu.<br/>
+            Uniwersytetu Gdańskiego.<br/>
             Aby potwierdzić rejestrację konta, kliknij <a href="{{link}}">TUTAJ</a>.<br/><br/>
         </p>
         <footer>
             Pozdrawiamy<br/>
-            Biuro Armatora Uniwersytetu
+            Biuro Armatora z jednostką r/v Oceanograf
         </footer>
     </body>
 </html>
