--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/requestToSupervisorMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/requestToSupervisorMessage.html
@@ -13,7 +13,7 @@
         </p>
         <footer>
             Pozdrawiamy<br/>
-            Biuro Armatora Uniwersytetu 
+            Biuro Armatora z jednostką r/v Oceanograf
         </footer>
     </body>
 </html>
