--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/passwordResetMessage.html
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/wwwroot/Templates/EmailTemplates/passwordResetMessage.html
@@ -8,7 +8,7 @@
 </p>
 <footer>
     Pozdrawiamy<br/>
-    Biuro Armatora Uniwersytetu Gdańskiego
+    Biuro Armatora z jednostką r/v Oceanograf
 </footer>
 </body>
 </html>
